# roq-kucoin-futures

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: meta.yaml
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags.cfg
src/roq/: CMakeLists.txt
src/roq/kucoin_futures/: .gitignore  CMakeLists.txt  TODO  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  collector.h  collector.hpp  config.cpp  config.h  config.hpp  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_state.hpp  drop_copy_state.json  flags.cpp  flags.h  flags.hpp  gateway.cpp  gateway.h  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.h  market_data.hpp  order_entry.cpp  order_entry.h  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_state.hpp  (+19 more)
src/roq/kucoin_futures/config/: kucoin-futures-sandbox.toml  kucoin-futures-test.toml  kucoin-futures.toml
src/roq/kucoin_futures/fix_bridge/: .gitignore  application.cpp  application.hpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/kucoin_futures/flags/: .gitignore  CMakeLists.txt  common.json  flags.json  misc.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/kucoin_futures/gateway/: account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_rest.cpp  order_entry_rest.hpp  order_entry_ws.cpp  order_entry_ws.hpp  private_token.hpp  request.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/kucoin_futures/json/: .gitignore  CMakeLists.txt  account.json  account_ack_data.json  account_data.json  ack.json  add_order_ack.json  add_order_ack_data.json  available_balance_change.json  available_balance_change_data.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_order_ack.json  cancel_order_ack_data.json  contract.json  contracts.json  contracts_ack_data_item.json  contracts_item.json  encoder.cpp  encoder.hpp  error.json  execution.json  execution_data.json  fair_method.json  fills.json  fills_data.json  fills_data_item.json  fills_item.json  funding_begin.json  funding_begin_data.json  funding_end.json  funding_end_data.json  funding_rate.json  funding_rate_data.json  instance_server.json  level2.json  level2_data.json  level2_data_item.json  map.cpp  map.hpp  (+58 more)
src/roq/kucoin_futures/protocol/json/: .gitignore  CMakeLists.txt  account_ack.json  account_ack_data.json  ack.json  add_order_ack.json  add_order_ack_data.json  available_balance_change.json  available_balance_change_data.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_order_ack.json  cancel_order_ack_data.json  channel_type.json  contracts_ack.json  contracts_ack_data_item.json  display_type.json  encoder.cpp  encoder.hpp  error.json  execution.json  execution_data.json  fair_method.json  fee_type.json  fills_ack.json  fills_ack_data_item.json  funding_begin.json  funding_begin_data.json  funding_end.json  funding_end_data.json  funding_rate.json  funding_rate_data.json  instance_server.json  level2.json  level2_data.json  level2_data_item.json  liquidity.json  map.cpp  map.hpp  margin_mode.json  (+68 more)
src/roq/kucoin_futures/test/: CMakeLists.txt  json_account.cpp  json_available_balance_change.cpp  json_execution.cpp  json_fills.cpp  json_funding_rate.cpp  json_level2.cpp  json_mark_index_price.cpp  json_order_book.cpp  json_order_change.cpp  json_order_margin_change.cpp  json_orders.cpp  json_position_change.cpp  json_position_settlement.cpp  json_positions.cpp  json_ticker.cpp  json_token.cpp  json_withdraw_hold_change.cpp
src/roq/kucoin_futures/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp  splitter.cpp  splitter.h  splitter.hpp
test/: .gitignore  CMakeLists.txt  json_account.cpp  json_account_ack.cpp  json_add_order.cpp  json_add_order_ack.cpp  json_available_balance_change.cpp  json_cancel_order_ack.cpp  json_contracts.cpp  json_contracts_ack.cpp  json_encoder.cpp  json_execution.cpp  json_fills.cpp  json_fills_ack.cpp  json_funding_begin.cpp  json_funding_end.cpp  json_funding_rate.cpp  json_level2.cpp  json_mark_index_price.cpp  json_match.cpp  json_order_book.cpp  json_order_book_ack.cpp  json_order_change.cpp  json_order_margin_change.cpp  json_orders.cpp  json_orders_ack.cpp  json_position_adjust_risk_limit.cpp  json_position_change.cpp  json_position_settlement.cpp  json_positions.cpp  json_positions_ack.cpp  json_snapshot.cpp  json_snapshot24h.cpp  json_ticker.cpp  json_ticker_v2.cpp  json_token.cpp  json_wallet_balance_change.cpp  json_withdraw_hold_change.cpp  json_ws_add_order_ack.cpp  json_ws_cancel_order_ack.cpp  (+3 more)
